{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 35,
  "lineage": "428a0fad-9b23-4968-54cb-3c1d02228b80",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d8b44787870a30de",
            "arn": "arn:aws:ec2:us-east-1:686699774218:elastic-ip/eipalloc-0d8b44787870a30de",
            "association_id": "eipassoc-042e6aef0b65229ce",
            "domain": "vpc",
            "id": "eipalloc-0d8b44787870a30de",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f5478a892a6d70ad",
            "private_dns": "ip-10-20-1-144.ec2.internal",
            "private_ip": "10.20.1.144",
            "public_dns": "ec2-54-224-167-207.compute-1.amazonaws.com",
            "public_ip": "54.224.167.207",
            "public_ipv4_pool": "amazon",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "resilient-web-joao-nat-eip-0",
              "Project": "resilient-web-joao"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "resilient-web-joao-nat-eip-0",
              "Project": "resilient-web-joao"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-015a05e12d5826134",
            "arn": "arn:aws:ec2:us-east-1:686699774218:elastic-ip/eipalloc-015a05e12d5826134",
            "association_id": "eipassoc-07426ec095103e4de",
            "domain": "vpc",
            "id": "eipalloc-015a05e12d5826134",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a61d98c3345242dd",
            "private_dns": "ip-10-20-2-31.ec2.internal",
            "private_ip": "10.20.2.31",
            "public_dns": "ec2-34-198-114-99.compute-1.amazonaws.com",
            "public_ip": "34.198.114.99",
            "public_ipv4_pool": "amazon",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "resilient-web-joao-nat-eip-1",
              "Project": "resilient-web-joao"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "resilient-web-joao-nat-eip-1",
              "Project": "resilient-web-joao"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686699774218:internet-gateway/igw-0e6d27a56bf36a37d",
            "id": "igw-0e6d27a56bf36a37d",
            "owner_id": "686699774218",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "resilient-web-joao-igw",
              "Project": "resilient-web-joao"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "resilient-web-joao-igw",
              "Project": "resilient-web-joao"
            },
            "vpc_id": "vpc-06088b4859a348b01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:686699774218:loadbalancer/app/resilient-web-joao-alb/ef282dd2cd4dee2d",
            "arn_suffix": "app/resilient-web-joao-alb/ef282dd2cd4dee2d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "resilient-web-joao-alb-79214507.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:686699774218:loadbalancer/app/resilient-web-joao-alb/ef282dd2cd4dee2d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "resilient-web-joao-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-072235ce620bf5acc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03485da98bfbd23e7"
              },
              {
                "subnet_id": "subnet-0b1846f8ca06d663b"
              }
            ],
            "subnets": [
              "subnet-03485da98bfbd23e7",
              "subnet-0b1846f8ca06d663b"
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Project": "resilient-web-joao"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "resilient-web-joao"
            },
            "vpc_id": "vpc-06088b4859a348b01",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:686699774218:listener/app/resilient-web-joao-alb/ef282dd2cd4dee2d/43bba66b0f77279e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:686699774218:targetgroup/resilient-web-joao-tg/800fef2ea75bf11b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:686699774218:listener/app/resilient-web-joao-alb/ef282dd2cd4dee2d/43bba66b0f77279e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:686699774218:loadbalancer/app/resilient-web-joao-alb/ef282dd2cd4dee2d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.web",
            "aws_lb_target_group.web",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:686699774218:targetgroup/resilient-web-joao-tg/800fef2ea75bf11b",
            "arn_suffix": "targetgroup/resilient-web-joao-tg/800fef2ea75bf11b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:686699774218:targetgroup/resilient-web-joao-tg/800fef2ea75bf11b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:686699774218:loadbalancer/app/resilient-web-joao-alb/ef282dd2cd4dee2d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "resilient-web-joao-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Project": "resilient-web-joao"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "resilient-web-joao"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06088b4859a348b01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d8b44787870a30de",
            "association_id": "eipassoc-042e6aef0b65229ce",
            "connectivity_type": "public",
            "id": "nat-0c2567ce9d340e8ee",
            "network_interface_id": "eni-0f5478a892a6d70ad",
            "private_ip": "10.20.1.144",
            "public_ip": "54.224.167.207",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03485da98bfbd23e7",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "resilient-web-joao-nat-0",
              "Project": "resilient-web-joao"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "resilient-web-joao-nat-0",
              "Project": "resilient-web-joao"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-015a05e12d5826134",
            "association_id": "eipassoc-07426ec095103e4de",
            "connectivity_type": "public",
            "id": "nat-051f2e16bb750e6bf",
            "network_interface_id": "eni-0a61d98c3345242dd",
            "private_ip": "10.20.2.31",
            "public_ip": "34.198.114.99",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b1846f8ca06d663b",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "resilient-web-joao-nat-1",
              "Project": "resilient-web-joao"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "resilient-web-joao-nat-1",
              "Project": "resilient-web-joao"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686699774218:route-table/rtb-0a220b336692e7e46",
            "id": "rtb-0a220b336692e7e46",
            "owner_id": "686699774218",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c2567ce9d340e8ee",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "resilient-web-joao-private-rt-0",
              "Project": "resilient-web-joao"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "resilient-web-joao-private-rt-0",
              "Project": "resilient-web-joao"
            },
            "timeouts": null,
            "vpc_id": "vpc-06088b4859a348b01"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686699774218:route-table/rtb-007cda927b8baf07a",
            "id": "rtb-007cda927b8baf07a",
            "owner_id": "686699774218",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-051f2e16bb750e6bf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "resilient-web-joao-private-rt-1",
              "Project": "resilient-web-joao"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "resilient-web-joao-private-rt-1",
              "Project": "resilient-web-joao"
            },
            "timeouts": null,
            "vpc_id": "vpc-06088b4859a348b01"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686699774218:route-table/rtb-0c4a1346c53a237f7",
            "id": "rtb-0c4a1346c53a237f7",
            "owner_id": "686699774218",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e6d27a56bf36a37d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "resilient-web-joao-public-rt",
              "Project": "resilient-web-joao"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "resilient-web-joao-public-rt",
              "Project": "resilient-web-joao"
            },
            "timeouts": null,
            "vpc_id": "vpc-06088b4859a348b01"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d24f68a46407218",
            "route_table_id": "rtb-0a220b336692e7e46",
            "subnet_id": "subnet-038d51d18aece37c2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fff3e3fb2d51dae0",
            "route_table_id": "rtb-007cda927b8baf07a",
            "subnet_id": "subnet-0b107ef10d8b5ae08"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0943447776967e642",
            "route_table_id": "rtb-0c4a1346c53a237f7",
            "subnet_id": "subnet-03485da98bfbd23e7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00dd7446aeb452d0d",
            "route_table_id": "rtb-0c4a1346c53a237f7",
            "subnet_id": "subnet-0b1846f8ca06d663b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686699774218:security-group/sg-072235ce620bf5acc",
            "description": "Allow HTTP inbound to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-072235ce620bf5acc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "resilient-web-joao-alb-sg",
            "name_prefix": "",
            "owner_id": "686699774218",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "resilient-web-joao-alb-sg",
              "Project": "resilient-web-joao"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "resilient-web-joao-alb-sg",
              "Project": "resilient-web-joao"
            },
            "timeouts": null,
            "vpc_id": "vpc-06088b4859a348b01"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686699774218:security-group/sg-0268627bbb1b13223",
            "description": "Allow HTTP from ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0268627bbb1b13223",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-072235ce620bf5acc"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "resilient-web-joao-web-sg",
            "name_prefix": "",
            "owner_id": "686699774218",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "resilient-web-joao-web-sg",
              "Project": "resilient-web-joao"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "resilient-web-joao-web-sg",
              "Project": "resilient-web-joao"
            },
            "timeouts": null,
            "vpc_id": "vpc-06088b4859a348b01"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686699774218:subnet/subnet-038d51d18aece37c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038d51d18aece37c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686699774218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "resilient-web-joao-private-us-east-1a",
              "Project": "resilient-web-joao"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "resilient-web-joao-private-us-east-1a",
              "Project": "resilient-web-joao"
            },
            "vpc_id": "vpc-06088b4859a348b01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686699774218:subnet/subnet-0b107ef10d8b5ae08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b107ef10d8b5ae08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686699774218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "resilient-web-joao-private-us-east-1b",
              "Project": "resilient-web-joao"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "resilient-web-joao-private-us-east-1b",
              "Project": "resilient-web-joao"
            },
            "vpc_id": "vpc-06088b4859a348b01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686699774218:subnet/subnet-03485da98bfbd23e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03485da98bfbd23e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "686699774218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "resilient-web-joao-public-us-east-1a",
              "Project": "resilient-web-joao"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "resilient-web-joao-public-us-east-1a",
              "Project": "resilient-web-joao"
            },
            "vpc_id": "vpc-06088b4859a348b01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686699774218:subnet/subnet-0b1846f8ca06d663b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1846f8ca06d663b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "686699774218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "resilient-web-joao-public-us-east-1b",
              "Project": "resilient-web-joao"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "resilient-web-joao-public-us-east-1b",
              "Project": "resilient-web-joao"
            },
            "vpc_id": "vpc-06088b4859a348b01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686699774218:vpc/vpc-06088b4859a348b01",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-060123f2866c107a6",
            "default_route_table_id": "rtb-0a29718601eea0fa2",
            "default_security_group_id": "sg-03da13b1a9c411310",
            "dhcp_options_id": "dopt-0d5b6b21a0df85bf4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06088b4859a348b01",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a29718601eea0fa2",
            "owner_id": "686699774218",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "resilient-web-joao-vpc",
              "Project": "resilient-web-joao"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "resilient-web-joao-vpc",
              "Project": "resilient-web-joao"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}